# api-embrapa-vitivinicultura

./: .dockerignore  .env  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: run.py  run_extract_dataset.py  run_load_dataset.py
app/infrastructure/: cache.py  config.py
app/models/base/: dataset.py
app/models/entities/: comercializacao.py  exportacao.py  importacao.py  processamento.py  producao.py  user.py
app/models/forms/: user_form.py  user_login_form.py
app/routes/: comercializacao_api.py  exportacao_api.py  importacao_api.py  processamento_api.py  producao_api.py  user_api.py
app/services/: comercializacao_service.py  exportacao_service.py  importacao_service.py  processamento_service.py  producao_service.py  scraping_service.py
app/utils/: dataset_util.py  general_util.py
notebooks/: Tech_Challenge_FIAP_MLE.ipynb
